Refactor: Agregué el nombre del User 1

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Jeremy Joel Ordoñez Juarez -- 2025428</h1>
+
+    <h1>JUlian Eligio Jax Cisneros -- 2025549</h1>
 </body>
 </html>
